@@ -482,15 +482,23 @@ xchat_hook_command(ph, "STOP", XCHAT_PRI_NORM, stop_cb, NULL, NULL);
 </blockquote>
 
 <h3><a class="cmd" name="xchat_emit_print">&nbsp;xchat_emit_print()&nbsp;</a></h3>
-<b>Prototype:</b> void xchat_emit_print(xchat_plugin *ph, char *event_name, ...);
+<b>Prototype:</b> int xchat_emit_print(xchat_plugin *ph, char *event_name, ...);
 <br>
-<br><b>Description:</b>
+<br><b>Description:</b> Generates a print event. This can be any
+event found in the Preferences > Lists > Text Events window.
 <br>
 <br><b>Arguments:</b>
 <blockquote><b>ph:</b> Plugin handle (as given to xchat_plugin_init).
 <br><b>event_name:</b> Text event to print.
 <br><br>
 </blockquote>
+<b>Returns:</b> 1-Success 0-Failure.
+<br><br>
+<b>Example:</b>
+<pre>
+xchat_emit_print(ph, "Channel Message", "John", "Hi there", "@", NULL);
+</pre>
+<br><br>
 
 <h3><a class="cmd" name="xchat_find_context">&nbsp;xchat_find_context()&nbsp;</a></h3>
 <b>Prototype:</b> xchat_context *xchat_find_context(xchat_plugin *ph, char *servname, char *channel);
@@ -588,7 +596,8 @@ not be freed and must be copied if needed after the call to xchat_get_info.
 <h3><a class="cmd" name="xchat_nickcmp">&nbsp;xchat_nickcmp()&nbsp;</a></h3>
 <b>Prototype:</b> int xchat_nickcmp(xchat_plugin *ph, char *s1, char *s2);
 <br>
-<br><b>Description:</b> Performs a RFC1459 compliant string compare. Use this to compare channels and nicknames. The function works the same way as strcasecmp.
+<br><b>Description:</b> Performs a nick name comparision, based on the current server connection. This might be a RFC1459 compliant string compare, or
+plain ascii (in the case of DALNet). Use this to compare channels and nicknames. The function works the same way as strcasecmp.
 <br>
 <br><b>Arguments:</b>
 <blockquote><b>ph:</b> Plugin handle (as given to xchat_plugin_init).
