@@ -21,6 +21,8 @@
  - win32: Added /set identd 0 switch to turn off built-in identd. 
  - Added 6-8 for perl's IRC::get_info to retreive network, host and
    topic (Ryan).
+ - Iterate in alpha order instead of op-alpha for nickcompletion
+   (Gauss_Z88).
  - 
  - 
 
